# btc_strat

./: data.ipynb  dc_optimization_parameter.ipynb  main.ipynb  optimize_dc_threshold.ipynb  pyproject.toml
binance/: download_kline.py  enums.py  utility.py
core/: data.py  dc.py  opt.py  plotting.py  preprocessing.py  proximity_measures.py  utils.py
core/vi/: discretization.py
