[project]
name = "btc-strat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.13.0",
    "deap",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "pydantic>=2.11.9",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
deap = { git = "https://github.com/DEAP/deap", rev = "master" }
